--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+中文化
 Fabric is a Python (2.5 or higher) library and command-line tool for
 streamlining the use of SSH for application deployment or systems
 administration tasks.
